Add some test